fixbug close toast

--- a/index.html
+++ b/index.html
@@ -49,11 +49,12 @@
 
                 // Click remove toast
                 toast.onclick = function(e) {
-                    if(e.target.closet('toast__close')) {
+                    if(e.target.closest('.toast__close')) {
                         main.removeChild(toast);
                         clearTimeout(autoRemoveId);
                     }
                 };
+
                 toast.innerHTML = `
                     <div class="toast__icon">
                         <i class="${icons[type]}"></i>
